# sysdash

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install.sh  pyproject.toml
docs/: README.md
sysdash/: __init__.py  components.py  constants.py  doctor.py  gpu.py  gpu_pane.py  hints.py  install.py  main.py  paths.py  pm.py  run.py  setup.py  style.py
tests/: test_sysdash.py
