[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sysdash"
version = "0.1.0"
description = "gotop and nvtop in one tmux session"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
sysdash = "sysdash.main:app"

[project.urls]
Homepage = "https://github.com/als-code/sysdash"
Repository = "https://github.com/als-code/sysdash"
Issues = "https://github.com/als-code/sysdash/issues"

[tool.hatch.build.targets.wheel]
packages = ["sysdash"]

[tool.pytest.ini_options]
testpaths = ["tests"]
